Fix: sometimes exons and genes seem to be missing from the genome browser.